<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="checkoutFragment"
            type="com.example.foodeapp.ui.fragment.CheckoutFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.fragment.CheckoutFragment">

        <Button
            android:id="@+id/buttonConfirmOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/bebas_neue"
            android:onClick="@{() -> checkoutFragment.buttonConfirmOrder()}"
            android:text="@string/confirm_order"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/payment_title"
            android:textColor="@color/textColor"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myAddressesBackButton" />

        <TextView
            android:id="@+id/textViewPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/price_title"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewPrice"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/bebas_neue"
            android:textColor="@color/primary"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewDeliverToTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDeliverToTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bebas_neue"
            android:text="DELIVER TO"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewDeliverTo"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDeliverTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewPaymentMethodTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPaymentMethodTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/payment_methods"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewPaymentMethod"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/bebas_neue"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonConfirmOrder"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/myAddressesBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/transparent"
            android:onClick="@{() -> checkoutFragment.backButton()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            app:tint="@color/textColor" />

        <Button
            android:id="@+id/elavatedButtonPromo"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/primaryDark"
            android:fontFamily="@font/bebas_neue"
            android:onClick="@{() -> checkoutFragment.buttonAddPromo()}"
            android:text="@string/add_promotion_code"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:icon="@drawable/add_24"
            app:iconTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewPageTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>