<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerFragment"
            type="com.example.foodeapp.ui.fragment.RegisterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.RegisterFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRegister1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/primary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/primary"
            app:counterTextColor="@color/primary"
            app:cursorColor="@color/primary"
            app:helperTextTextColor="@color/primary"
            app:hintTextColor="@color/primaryDark"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutRegister2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:placeholderTextColor="@color/primary"
            app:prefixTextColor="@color/primary"
            app:suffixTextColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRegister2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/primary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/primary"
            app:counterTextColor="@color/primary"
            app:cursorColor="@color/primary"
            app:helperTextTextColor="@color/primary"
            app:hintTextColor="@color/primaryDark"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutRegister3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:placeholderTextColor="@color/primary"
            app:prefixTextColor="@color/primary"
            app:suffixTextColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRegister3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/primary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/primary"
            app:counterTextColor="@color/primary"
            app:cursorColor="@color/primary"
            app:helperTextTextColor="@color/primary"
            app:hintTextColor="@color/primaryDark"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutRegister4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:placeholderTextColor="@color/primary"
            app:prefixTextColor="@color/primary"
            app:suffixTextColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRegister4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:textColorHint="@color/primary"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/primary"
            app:counterTextColor="@color/primary"
            app:cursorColor="@color/primary"
            app:helperTextTextColor="@color/primary"
            app:hintTextColor="@color/primaryDark"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary"
            app:placeholderTextColor="@color/primary"
            app:prefixTextColor="@color/primary"
            app:suffixTextColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/register_title"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:onClick="@{() -> registerFragment.registerButton(fullNameEditText.getText().toString(), emailEditText.getText().toString(), phoneEditText.getText().toString(), passwordEditText.getText().toString())}"
            app:layout_constraintBottom_toTopOf="@+id/textViewGoToLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:onClick="@{() -> registerFragment.goBack()}"
            android:text="@string/already_account"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/register_title"
            android:textAllCaps="true"
            android:textColor="@color/dark"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutRegister1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>